--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,18 @@ fastapi
 uvicorn
 python-multipart
 cohere
+langchain
 langchain-chroma
+langchain_cohere
+langchain-community
+langchain-core
 chromadb
 pdfplumber
 ipykernel
 pdfplumber
+python-dotenv
+numpy
+pydantic
+
+
+
